--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/check": "^0.5.4",
     "@astrojs/markdoc": "^0.9.0",
     "@astrojs/rss": "^4.0.5",
+    "@astrojs/vercel": "^7.3.3",
     "@keystatic/astro": "^3.0.2",
     "@keystatic/core": "^0.3.19",
     "@resvg/resvg-js": "^2.6.0",
